# fact-factory

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  OLLAMA.md  README.md  benchmark.json  pyproject.toml  test.sh
src/fact_factory/: __init__.py  app.py
src/fact_factory/cli/: context.py  main.py  output.py  serialize.py
src/fact_factory/domain/: exceptions.py  models.py  ports.py  relevance.py
src/fact_factory/domain/services/: clear_service.py  fact_service.py  gap_service.py  query_service.py  stats_service.py
src/fact_factory/infrastructure/: config.py  discovery.py  instance_manager.py
src/fact_factory/infrastructure/ollama/: client.py
src/fact_factory/infrastructure/sqlite/: repositories.py  schema.py
src/fact_factory/reranking/: hybrid.py
templates/: IA-INSTALL.md
templates/as-agent/: fact-factory.md
templates/as-memory/: snippet.md
